# automancy

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README-LICENSE.html  README.md  about.toml  build.rs  export_models.py  export_models.sh  flake.nix  install.sh  justfile  make_assets.sh  misc_options.ron  options.ron  options.toml  renderdoc.cap  run.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
assets/: elements.md
automancy_defs/: Cargo.toml
automancy_defs/shaders/: combine.wgsl  effects.wgsl  game.wgsl  game_frag.glsl  game_vert.glsl  gui_vert.glsl  overlay_vert.glsl
automancy_defs/src/: cg.rs  colors.rs  coord.rs  gui.rs  id.rs  lib.rs  math.rs  rendering.rs  shaders.rs  stack.rs  window.rs
automancy_macros/: Cargo.toml
automancy_macros/src/: cell_getter.rs  ids.rs  lib.rs  option_getter.rs
automancy_resources/: Cargo.toml
automancy_resources/src/: audio.rs  data.rs  error.rs  format.rs  function.rs  inventory.rs  item.rs  lib.rs  model.rs  registry.rs  rhai_coord.rs  rhai_data.rs  rhai_functions.rs  rhai_math.rs  rhai_render.rs  rhai_resources.rs  rhai_tile.rs  rhai_ui.rs  rhai_utils.rs  script.rs  shader.rs  tag.rs  tile.rs  translate.rs
automancy_resources/src/data/: inventory.rs  item.rs  mod.rs  stack.rs
automancy_resources/src/types/: audio.rs  category.rs  font.rs  function.rs  item.rs  mod.rs  model.rs  research.rs  script.rs  shader.rs  tag.rs  tile.rs  translate.rs
build_script/: Cargo.toml
build_script/src/: main.rs
compile/shaders/: frag.glsl  frag_gui.glsl  game_frag.glsl  (+8 more)
crates/automancy_data/: Cargo.toml
crates/automancy_data/src/: id.rs  lib.rs  math.rs
crates/automancy_data/src/game/: coord.rs  generic.rs  inventory.rs  item.rs  mod.rs  options.rs
crates/automancy_data/src/map/: mod.rs
crates/automancy_data/src/parse/: id.rs  mod.rs  ron.rs
crates/automancy_data/src/rendering/: camera.rs  colors.rs  draw.rs  gpu.rs  mod.rs  view.rs
crates/automancy_data/src/util/: mod.rs  num.rs  round.rs
crates/automancy_data/tests/: test.rs  tile_coord.rs
crates/automancy_defs/: Cargo.toml
crates/automancy_defs/src/: colors.rs  coord.rs  id.rs  lib.rs  math.rs  rendering.rs  stack.rs  window.rs
crates/automancy_game/: Cargo.toml
crates/automancy_game/src/: format.rs  lib.rs
crates/automancy_game/src/actor/: game.rs  message.rs  mod.rs  tile.rs  tile_entity.rs  util.rs
crates/automancy_game/src/actor/map/: mod.rs
crates/automancy_game/src/actor/map/assets/main_menu/: data.ron
crates/automancy_game/src/input/: camera.rs  handler.rs  mod.rs
crates/automancy_game/src/persistent/: mod.rs  options.rs  ron.rs
crates/automancy_game/src/persistent/map/: mod.rs
crates/automancy_game/src/persistent/map/assets/main_menu/: data.ron  map.zst
crates/automancy_game/src/resources/: error.rs  format.rs  mod.rs  registry.rs
crates/automancy_game/src/resources/types/: audio.rs  category.rs  font.rs  function.rs  item.rs  mod.rs  model.rs  recipe.rs  research.rs  script.rs  shader.rs  tag.rs  tile.rs  translate.rs
crates/automancy_game/src/scripting/: coord.rs  data.rs  math.rs  mod.rs  render.rs  tile.rs  ui.rs  util.rs
crates/automancy_game/src/state/: error.rs  event.rs  mod.rs  ui.rs
crates/automancy_game/src/ui/: mod.rs  state.rs
crates/automancy_macros/: Cargo.toml
crates/automancy_macros/src/: ids.rs  lib.rs  option_getter.rs
crates/automancy_macros/tests/: id_reg.rs
crates/automancy_rendering/: Cargo.toml
crates/automancy_rendering/benches/: bench.rs  instance.rs
crates/automancy_rendering/src/: cache.rs  data.rs  game.rs  gpu.rs  instance.rs  lib.rs  model.rs  window_util.rs
crates/automancy_rendering/src/gpu/: data.rs  mod.rs  util.rs
crates/automancy_rendering/src/renderer/: game.rs  game_render.rs  instance.rs  instances.rs  mod.rs  model.rs
crates/automancy_rendering/src/ui/: mod.rs
crates/automancy_rendering/src/ui/custom/: game_object.rs  mod.rs
crates/automancy_rendering/tests/: instance.rs
crates/automancy_resources/: Cargo.toml
crates/automancy_resources/src/: data.rs  error.rs  format.rs  inventory.rs  lib.rs  registry.rs  rhai_coord.rs  rhai_data.rs  rhai_math.rs  rhai_render.rs  rhai_resources.rs  rhai_tile.rs  rhai_ui.rs  rhai_utils.rs
crates/automancy_resources/src/types/: audio.rs  category.rs  font.rs  function.rs  item.rs  mod.rs  model.rs  research.rs  script.rs  shader.rs  tag.rs  tile.rs  translate.rs
crates/automancy_system/: Cargo.toml
crates/automancy_system/src/: camera.rs  game.rs  input.rs  lib.rs  map.rs  options.rs  tile_entity.rs  ui_state.rs
crates/automancy_system/src/assets/main_menu/: info.ron
crates/automancy_system/src/util/: actor.rs  mod.rs  num.rs
crates/automancy_ui/: Cargo.toml
crates/automancy_ui/src/: custom.rs  lib.rs
crates/automancy_ui/src/components/: button.rs  checkbox.rs  container.rs  game_object.rs  hover.rs  interactive.rs  layout.rs  mod.rs  movable.rs  position.rs  scrollable.rs  select.rs  shapes.rs  slider.rs  text.rs  textbox.rs  tip.rs  util.rs
crates/lib/: Cargo.toml
crates/lib/src/: discord.rs  event.rs  gpu.rs  integration.rs  lib.rs  renderer.rs  ui_game_object.rs
crates/lib/src/gui/: debug.rs  error.rs  info.rs  item.rs  menu.rs  mod.rs  player.rs  popup.rs  tile_config.rs  tile_selection.rs  util.rs
crates/lib/src/render/: mod.rs
crates/lib/src/rendering/: data.rs  game.rs  mod.rs
crates/lib/src/rendering/ui/: game_object.rs  mod.rs
crates/lib/src/util/: mod.rs
crates/main/: Cargo.toml
crates/main/src/: debug.rs  main.rs  panic.rs  util.rs
game/: bin.rs
map/: 0,0.datapool  0,0.idpool  0,0.tiles
promotion/: asciiart-with-color.sh  asciiart.txt
resources/: tile.blend  tile.blend1  tile.ply  tile_purple.blend  tile_purple.blend1  tile_purple.ply
scripts/: export_blender.py  export_svg.py  file_check.sh  make_models.sh  make_shaders.sh  run_glsl.sh  run_model.sh  run_svg.sh
src/: camera.rs  dbg_frag.glsl  dbg_vert.glsl  event.rs  game.rs  gpu.rs  input.rs  lib.rs  main.rs  map.rs  options.rs  renderer.rs  setup.rs  tile_entity.rs  vert.glsl
tests/: test.rs
(+520 files in other folders)
