# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
package.version = "0.1.0"
package.authors = [
    "Madeline Sparkles <madeline@mouse.lgbt>",
    "Mae Rosaline <mae@maestoso.online>",
]
package.edition = "2021"
resolver = "2"
members = [
    "build_script",
    "crates/automancy_defs",
    "crates/automancy_macros",
    "crates/automancy_resources",
    "crates/automancy_system",
    "crates/automancy_ui",
    "crates/lib",
    "crates/main",
]


[profile.dev]
opt-level = 3
lto = "off"
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "off"
panic = "abort"

[profile.release-bin]
inherits = "release"
opt-level = "z"      # optimize for size
lto = "fat"          # turn on Link-Time Optimizations
codegen-units = 1    # trade compile time with maximum optimization


[workspace.dependencies]
automancy_defs = { path = "crates/automancy_defs" }
automancy_macros = { path = "crates/automancy_macros" }
automancy_resources = { path = "crates/automancy_resources" }
automancy_system = { path = "crates/automancy_system" }
automancy_ui = { path = "crates/automancy_ui" }
automancy_lib = { path = "crates/lib" }


serde = { version = "1", features = ["derive"] }
ron = "0.8.1"

wgpu = { version = "22.0.0", features = ["serde"] }

winit = { version = "0.30.3", features = ["serde"] }

yakui = { git = "https://github.com/SecondHalfGames/yakui.git", default-features = false }
yakui-winit = { git = "https://github.com/SecondHalfGames/yakui.git" }
yakui-wgpu = { git = "https://github.com/SecondHalfGames/yakui.git" }
cosmic-text = "0.12.0"

log = "0.4"

anyhow = "1"
thiserror = "1"
walkdir = "2.5.0"
hashbrown = { version = "0.15.0", features = ["serde", "rayon", "inline-more"] }
bytemuck = "1.19.0"
image = "0.25.1"
uuid = "1.10.0"
fuzzy-matcher = "0.3.7"
crunch = "0.5.3"


rhai = { version = "1.19.0", features = [
    "sync",
    "no_time",
    "no_custom_syntax",
    "no_closure",
    "no_float",
    "only_i32",
    "metadata",
    "internals",
] }

ractor = "0.12.2"
tokio = { version = "1", features = ["full"] }
rayon = "1.10.0"


[patch."https://github.com/SecondHalfGames/yakui.git"]
yakui = { git = "https://github.com/automancy/yakui.git" }
yakui-wgpu = { git = "https://github.com/automancy/yakui.git" }
yakui-winit = { git = "https://github.com/automancy/yakui.git" }
