[package]
name = "automancy_defs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }

wgpu = { workspace = true }

egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_extras = { workspace = true }

winit = { workspace = true }

ordered-float = { workspace = true }
hashbrown = { workspace = true }

rhai = { workspace = true }



log = "0.4"

string-interner = { git = "https://github.com/automancy/string-interner" }
hexx = { version = "0.15.0", features = ["serde"] }
bytemuck = "1.8.0"
flexstr = { version = "0.9.2", features = ["serde", "fast_format"] }
glam = "0.25.0"
color-hex = "0.2.0"
slice-group-by = "0.3.0"
petgraph = "0.6.4"

gltf = "1.2.0"