[package]
name = "automancy_defs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }

wgpu = { workspace = true }

yakui = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

winit = { workspace = true }

log = { workspace = true }

hashbrown = { workspace = true }
bytemuck = { workspace = true }

rhai = { workspace = true }

string-interner = { git = "https://github.com/automancy/string-interner" }
hexx = { git = "https://github.com/automancy/hexx.git", features = ["serde"] }

slice-group-by = "0.3.0"
petgraph = "0.6.5"
kira = "0.9.3"
chrono = "0.4.38"
gltf = "1.4.1"
glam = "0.29.0"
color-hex = "0.2.0"
ttf-parser = "0.24.0"
hex = "0.4.3"
