[package]
name = "automancy_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
automancy_defs = { path = "../automancy_defs" }

syn = "2.0.68"
proc-macro2 = "1.0.86"
quote = "1.0.36"
