[package]
name = "automancy_resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automancy_macros = { workspace = true }
automancy_defs = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }

rhai = { workspace = true }



walkdir = "2.3.3"
chrono = "0.4.24"
kira = "0.8.3"