[package]
name = "automancy_resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automancy_macros = { workspace = true }
automancy_defs = { workspace = true }

yakui = { workspace = true }

serde = { workspace = true }
ron = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
ordered-float = { workspace = true }
walkdir = { workspace = true }
hashbrown = { workspace = true }

rhai = { workspace = true }


chrono = "0.4.24"
kira = "0.9.0"
ttf-parser = "0.21.1"
hex = "0.4.3"
