[package]
name = "automancy_resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automancy_macros = { path = "../automancy_macros" }
automancy_defs = { path = "../automancy_defs" }

yakui = { workspace = true }

serde = { workspace = true }
ron = { workspace = true }

log = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
hashbrown = { workspace = true }

rhai = { workspace = true }

interpolator = { version = "0.5.0", features = ["number"] }
