[package]
name = "automancy_defs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }

wgpu = { workspace = true }

yakui = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

winit = { workspace = true }

log = { workspace = true }

hashbrown = { workspace = true }
bytemuck = { workspace = true }

rhai = { workspace = true }

string-interner = { git = "https://github.com/automancy/string-interner" }
hexx = { git = "https://github.com/automancy/hexx.git", features = ["serde"] }

slice-group-by = "0.3.0"
kira = "0.9.3"
chrono = "0.4.38"
gltf = "1.4.1"
glam = "0.29.0"
color-hex = "0.2.0"
ttf-parser = "0.25.0"
hex = "0.4.3"
