[package]
name = "automancy_defs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
license-file = { workspace = true }

[dependencies]
# logging
log = { workspace = true }

# parsing / data mangling / math / files
bytemuck = { workspace = true }
const-hex = { workspace = true }
glam = "0.30.4"
gltf = { workspace = true }
hexx = { workspace = true }
serde = { workspace = true }

# specialized data storage types
hashbrown = { workspace = true }
string-interner = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }
winit = { workspace = true }

# user input / user interface
kira = { workspace = true }
yakui = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

# scripting / game logic / async runtime
rhai = { workspace = true }

# utils
chrono = { workspace = true }
slice-group-by = { workspace = true }
