[package]
name = "automancy_game"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
automancy_data = { workspace = true }
automancy_macros = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
const-hex = { workspace = true }
gltf = { workspace = true }
hexx = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }

# specialized data storage types
hashbrown = { workspace = true }
petgraph = { workspace = true }

# user input / user interface
kira = { workspace = true }
yakui = { workspace = true }

# scripting / game logic / async runtime
ractor = { workspace = true }
rhai = { workspace = true }

# utils
anyhow = { workspace = true }
chrono = { workspace = true }
interpolator = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
