[package]
name = "automancy_rendering"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
automancy_data = { workspace = true }
automancy_macros = { workspace = true }
automancy_game = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
bytemuck = { workspace = true }
gltf = { workspace = true }
image = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }

# specialized data storage types
hashbrown = { workspace = true }
ordermap = { workspace = true }
range-set-blaze = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }
winit = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

# user input / user interface
arboard = { workspace = true }
yakui = { workspace = true }

# scripting / game logic / async runtime
tokio = { workspace = true }

# utils
anyhow = { workspace = true }
slice-group-by = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
