[package]
name = "automancy_rendering"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
automancy_data = { workspace = true }
automancy_game = { workspace = true }
automancy_macros = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
bytemuck = { workspace = true }
crunch = { workspace = true }
gltf = { workspace = true }
image = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }

# specialized data storage types
bit-set = { workspace = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }
winit = { workspace = true }

# user input / user interface
arboard = { workspace = true }
cosmic-text = { workspace = true }
yakui = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

# scripting / game logic / async runtime
ractor = { workspace = true }
tokio = { workspace = true }

# utils
anyhow = { workspace = true }
rand = { workspace = true }
slice-group-by = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench"
harness = false
