[package]
name = "automancy_rendering"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
automancy_data = { workspace = true }
automancy_game = { workspace = true }
automancy_macros = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
bytemuck = { workspace = true }
crunch = { workspace = true }
gltf = { workspace = true }
num-traits = { workspace = true }

# specialized data storage types
hashbrown = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }

# user input / user interface
yakui = { workspace = true }
yakui-wgpu = { workspace = true }

# utils
anyhow = { workspace = true }
rand = { workspace = true }
slice-group-by = { workspace = true }
