[package]
name = "automancy_resources"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
automancy_defs = { workspace = true }
automancy_macros = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
const-hex = { workspace = true }

gltf = { workspace = true }
hexx = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
ttf-parser = "0.25.1"

# specialized data storage types
hashbrown = { workspace = true }
petgraph = { workspace = true }

# user input / user interface
kira = { workspace = true }
yakui = { workspace = true }

# scripting / game logic / async runtime
rhai = { workspace = true }

# utils
anyhow = { workspace = true }
chrono = { workspace = true }
interpolator = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
