[package]
name = "automancy_system"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
automancy_defs = { workspace = true }
automancy_macros = { workspace = true }
automancy_resources = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
bytemuck = { workspace = true }

hexx = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

# specialized data storage types
arraydeque = { workspace = true }
enum-map = { workspace = true }
hashbrown = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }
winit = { workspace = true }

# user input / user interface
cosmic-text = { workspace = true }
kira = { workspace = true }
yakui = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

# scripting / game logic / async runtime
ractor = { workspace = true }
rayon = { workspace = true }
rhai = { workspace = true }
tokio = { workspace = true }

# utils
anyhow = { workspace = true }
fuzzy-matcher = { workspace = true }
interpolator = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
