[package]
name = "automancy_lib"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
license-file = { workspace = true }

[dependencies]
automancy_defs = { workspace = true }
automancy_macros = { workspace = true }
automancy_resources = { workspace = true }
automancy_system = { workspace = true }
automancy_ui = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
bytemuck = { workspace = true }
crunch = { workspace = true }
hexx = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

# specialized data storage types
hashbrown = { workspace = true }
image = { workspace = true }
ordermap = { workspace = true }
petgraph = { workspace = true }
range-set-blaze = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }
winit = { workspace = true }

# user input / user interface
arboard = { workspace = true }
cosmic-text = { workspace = true }
open = { workspace = true }
yakui = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

# scripting / game logic / async runtime
ractor = { workspace = true }
rhai = { workspace = true }
tokio = { workspace = true }

# utils
anyhow = { workspace = true }
fuzzy-matcher = { workspace = true }
interpolator = { workspace = true }
slice-group-by = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
