[package]
name = "automancy_lib"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
automancy_data = { workspace = true }
automancy_game = { workspace = true }
automancy_macros = { workspace = true }
automancy_rendering = { workspace = true }
#automancy_ui = { workspace = true }

# logging
log = { workspace = true }

# parsing / data mangling / math / files
bytemuck = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }

# specialized data storage types
hashbrown = { workspace = true }
image = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }
winit = { workspace = true }

# user input / user interface
kira = { workspace = true }

# scripting / game logic / async runtime
ractor = { workspace = true }
tokio = { workspace = true }

# utils
anyhow = { workspace = true }
