[package]
name = "automancy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
automancy_data = { workspace = true }
automancy_game = { workspace = true }
automancy_lib = { workspace = true }
automancy_rendering = { workspace = true }

# logging
color-eyre = "0.6.5"
env_logger = "0.11.8"
human-panic = "2.0.3"
log = { workspace = true }
strip-ansi-escapes = "0.2.1"

# parsing / data mangling / math / files
image = { workspace = true }

# rendering / windowing
wgpu = { workspace = true }
winit = { workspace = true }

# user input / user interface
arboard = { workspace = true }
cosmic-text = { workspace = true }
kira = { workspace = true }
open = { workspace = true }
rfd = "0.15.4"
yakui = { workspace = true }
yakui-wgpu = { workspace = true }
yakui-winit = { workspace = true }

# scripting / game logic / async runtime
ractor = { workspace = true }
tokio = { workspace = true }

# utils
anyhow = { workspace = true }
uuid = { workspace = true }

# tracy version v0.12.2
tracing-tracy = "=0.11.4"
tracy-client = "=0.18.2"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
